Subtle IRC Text Entry Hint
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7375 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3930,7 +3930,7 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_IRC_INPUT_CAPTION   "Chat!"
+    IDS_IRC_INPUT_CAPTION   "Send:"
     IDS_IRC_PANEL_TITLE     "Welcome to Shareaza Chat!"
     IDS_IRC_PANEL_SUBTITLE  "Please respect others while using this service"
     IDS_IRC_PANEL_ADDCHANNEL "Add"
